--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
                         <div class="dropdown-contentt">
                             @Html.ActionLink("Insertar formulario", "Index", "Formulario")
                             @Html.ActionLink("Asignar formulario", "Index", "AsignarFormularios")
+                            @Html.ActionLink("Evaluar profesores", "Index", "LlenarFormulario")
                             @Html.ActionLink("Visualizar resultados de evaluaciones", "Index", "Responde")
                             @Html.ActionLink("Sección", "Index", "Seccion")
                             @Html.ActionLink("Ítem", "Index", "Item")
