Cambios en interfaz de cursos matriculados por estudiante

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/LlenarFormulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/LlenarFormulario/Index.cshtml
@@ -10,7 +10,7 @@
     <title>My page</title>
 </head>
 <body>
-    <h2> Cursos disponibles</h2>     
+    <h2> Cursos en los que está matriculado</h2>     
 
     <table id="tabla-gruposMatriculado" class="table table-sm table-hover" cellspacing="0" width="100">
         <tr>
