--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -70,7 +70,7 @@
         </div>
     }
 
-    @using (Ajax.BeginForm("AsignacionFormularioGrupo", "AsignarFormularios", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "asign-content" }))
+   @using (Ajax.BeginForm("AsignacionFormularioGrupo", "AsignarFormularios", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "asign-content" }))
     {
         <div class="row">
             <div class="col-sm-8">
@@ -157,35 +157,44 @@
             <button type="button" style="display:none" id="boton-abrir-modal" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalReporte">Reporte de asignaciones</button>
         </div>
 
+    }
 
+    <!-- Modal -->
+    <div id="modalReporte" class="modal fade" role="dialog">
 
-        <!-- Modal -->
-        <div id="modalReporte" class="modal fade" role="dialog">
-            <div class="modal-dialog" style="height:63vh; width:73vw;">
+       @using (Html.BeginForm("Asignar", "AsignarFormularios", FormMethod.Post))
+        {
+
+            <div class="modal-dialog" style="height:73vh; width:73vw;">
 
                 <!-- Modal content-->
                 <div class="modal-content">
 
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Asignaciones de formularios realizadas para el SEMESTRE-AÑO</h4>
+                        <h4 class="modal-title">Asignaciones de formularios por realizar</h4>
                     </div>
 
                     <div class="modal-body">
-                        <div id="asign-content" style="height:60vh; width:70vw; overflow:auto;">
+                        <div id="asign-content" style="height:70vh; width:70vw;">
                             @Html.Partial("AsignacionFormularioGrupo", Model.GruFormsSeleccionados)
                         </div>
                     </div>
 
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                    <div class="modal-footer" align="center">
+                        <button type="button" id="boton-efectuar" class="btn btn-default">Efectuar asignaciones</button>
+                        <span> </span>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                     </div>
+
+                    <input type="submit" style="display:none" id="efectuar" value="EFECTUAR ASIGNACIONES"/>
 
                 </div>
 
             </div>
-        </div>
-    }
+        }
+
+    </div>
 
 </div>
 
