--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Perfiles<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Cambiar perfil actual", "Index", "Perfil")</li>
-                            @if (IdentidadManager.obtener_perfil_actual() == "Admin")
+                            @if (IdentidadManager.obtener_perfil_actual() == "Administrador")
                             {
                                 <li>@Html.ActionLink("Asignar/Revocar permisos", "SeleccionarPermisos", "SeleccionPermisos")</li>
                             }
