Primera versión de la eliminación de perfiles.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Perfiles<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Cambiar perfil actual", "Index", "Perfil")</li>
+                            <li>@Html.ActionLink("Cambiar perfil actual", "Cambiar", "Perfil")</li>
                             <li class="disabled"><a id="link_deshabilitado">Asignar/Revocar permisos</a></li>
                             <li class="disabled"><a id="link_deshabilitado">Crear perfil</a></li>
                             <li class="disabled"><a id="link_deshabilitado">Eliminar perfil</a></li>
