Se muestran los cursos junto con el formulario que tiene asignado para cada estudiante en los cursos que tiene matriculados.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/LlenarFormulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/LlenarFormulario/Index.cshtml
@@ -53,7 +53,9 @@
                         @Html.DisplayFor(model => item.nombreProfeCurso)
                         @Html.DisplayFor(model => item.apellidoProfe)
                     </td>
-
+                    <td>
+                       @Html.ActionLink(item.formulario,"","");
+                    </td>
                 </tr>
                
             }
