--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
@@ -16,60 +16,68 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        @*<h4>Formulario</h4>*@
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
+    
 
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control", @maxlength = "7" } })
-                @Html.ValidationMessageFor(model => model.CodigoFormulario, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    @*<h4>Formulario</h4>*@
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
 
-            </div>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control", @maxlength = "7" } })
+            @Html.ValidationMessageFor(model => model.CodigoFormulario, "", new { @class = "text-danger" })
+
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @maxlength = "26" } })
-                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @maxlength = "26" } })
+            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        @* Creacion de los tres botones de la forma que el PO quiere que se visualicen siempre *@
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-
-                <input type="submit" value="Crear" class="btn btn-secondary" id="botonCrearFormulario"
-                       @{ if (null != null) { @: disabled="disabled"
-                       } } />
-                @*<input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPreviaFormulario" onclick="accionBotonVistaPreviaFormulario()" />*@
-                @*<input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelar()" />*@
-            </div>
+    <div class="form-group">
+        @Html.Label("Unidad Academica", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.CodigoUnidadAca, new SelectList(ViewBag.CodigoUnidadAca, "Value", "Text"), "Seleccione")
+            @Html.ValidationMessageFor(model => model.CodigoUnidadAca, "", new { @class = "text-danger" })
         </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+
+            <input type="submit" value="Crear" class="btn btn-secondary" id="botonCrearFormulario"
+                   @{ if (null != null) { @: disabled="disabled"
+                   } } />
+            @*<input type="submit" value="Vista Previa" class="btn btn-secondary" p id="botonVistaPreviaFormulario" onclick="accionBotonVistaPreviaFormulario()" />*@
+            @*<input type="submit" value="Cancelar" class="btn btn-secondary" id="botonCancelarFormulario" onclick="accionBotonCancelar()" />*@
+        </div>
+    </div>
 
 
 
-        @* Accion al seleccionar el boton de vista previa de formulario*@
-        @*<script>
-                function accionBotonVistaPreviaFormulario() {
-                    document.getElementById("botonVistaPreviaFormulario").style.color = "blue";
-                }
-            </script>*@
+    @* Accion al seleccionar el boton de vista previa de formulario*@
+    @*<script>
+            function accionBotonVistaPreviaFormulario() {
+                document.getElementById("botonVistaPreviaFormulario").style.color = "blue";
+            }
+        </script>*@
 
-        @* Accion al seleccionar el boton de cancelar la creacion de un formulario *@
-        <script>
+    @* Accion al seleccionar el boton de cancelar la creacion de un formulario *@
+    <script>
         function accionBotonCancelar() {
             document.location = '@Url.Action("Index")';
         }
-        </script>
+    </script>
 
 
 
 
 
 
-    </div>
+</div>
 }
