--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -84,6 +84,7 @@
                             @Html.ActionLink("Visualizar resultados de evaluaciones", "Index", "Responde")
                             @Html.ActionLink("Sección", "Index", "Seccion")
                             @Html.ActionLink("Ítem", "Index", "Item")
+                            @Html.ActionLink("Llenar formulario", "Index", "LlenarFormulario")
                         </div>
                     </div>
                 </div> <!--navbar-collapse collapse-->
